force-app/main/default/objects/Order_Line_Item__c/fields/Abacus_code__c.field-meta.xml
<CustomField>
    <fullName>Abacus_code__c</fullName>
    <label>Abacus code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>