force-app/main/default/objects/Order_Line_Item__c/fields/Date_of_rejection__c.field-meta.xml
<CustomField>
    <fullName>Date_of_rejection__c</fullName>
    <label>Date of rejection</label>
    <type>Date</type>
</CustomField>