force-app/main/default/objects/Order_Line_Item__c/fields/Line_amount__c.field-meta.xml
<CustomField>
    <fullName>Line_amount__c</fullName>
    <label>Line amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>