force-app/main/default/objects/Order_Line_Item__c/fields/Line_amount_excluding_VAT__c.field-meta.xml
<CustomField>
    <fullName>Line_amount_excluding_VAT__c</fullName>
    <label>Line amount (excluding VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>