force-app/main/default/objects/Order_Line_Item__c/fields/Order_number_Absis__c.field-meta.xml
<CustomField>
    <fullName>Order_number_Absis__c</fullName>
    <label>Order number Absis</label>
    <length>250</length>
    <type>Text</type>
</CustomField>