force-app/main/default/objects/Order_Line_Item__c/fields/OSF_CC_External_Order_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>OSF_CC_External_Order_Line_Item_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>OSF CC External Order Line Item ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>