force-app/main/default/objects/Order_Line_Item__c/fields/Price_PVP_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_PVP_with_VAT__c</fullName>
    <label>Price PVP (with VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>