force-app/main/default/objects/Order_Line_Item__c/fields/Reasons_for_rejection__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_rejection__c</fullName>
    <label>Reasons for rejection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z0-Posició Rebutjada pel client</fullName>
            </value>
            <value>
                <fullName>Z1-Descatalogat/Baixa</fullName>
            </value>
            <value>
                <fullName>Z2-Pendent revisió preus</fullName>
            </value>
            <value>
                <fullName>Z3-Cancel·lació per temps excedit</fullName>
            </value>
            <value>
                <fullName>Z4-Cancel·lació incidència Proveïdor</fullName>
            </value>
            <value>
                <fullName>Z5-Cancel·lació Exhaurida Edició</fullName>
            </value>
            <value>
                <fullName>Z6-Cancel·lació Descatalogat proveïdor</fullName>
            </value>
            <value>
                <fullName>Z7-Cancel·lació en reimpressió</fullName>
            </value>
            <value>
                <fullName>Z8-Cancel·lació sense existències proveïdor</fullName>
            </value>
            <value>
                <fullName>Z9-Incidencia C&amp;C</fullName>
            </value>
            <value>
                <fullName>ZE-Recepcionat Elkar</fullName>
            </value>
            <value>
                <fullName>ZP-Cancel·lació Producte.</fullName>
            </value>
            <value>
                <fullName>ZW-Carrito enviat a la WEB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>