force-app/main/default/objects/Order_Line_Item__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <length>50</length>
    <type>Text</type>
</CustomField>